tests/ui/openapi_type/nullable_non_bool.stderr
error: Expected bool
 --> $DIR/nullable_non_bool.rs:6:23
  |
6 |     #[openapi(nullable = "yes, please")]
  |                          ^^^^^^^^^^^^^
